--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,53 +1,19 @@
 {
-    "name": "service locator",
-    "short_name": "GSL",
-    "start_url": ".",
-    "display": "standalone",
-    "description": "Allows End-Users to easily find and locate government services in RSA.\r The app scrapes data from official government websites such as departments, agencies and public services, including contact information, operating hours, and services offered. Find and locate governement services in RSA.",
-    "theme_color": "#faf6f6",
-    "background_color": "#242424",
-    "icons": [
-      {
-        "src": "/assets/icons/android-icon-36x36.png",
-        "sizes": "36x36",
-        "type": "image/png",
-        "density": "0.75",
-        "purpose": "any maskable"
-      },
-      {
-        "src": "/assets/icons/android-icon-48x48.png",
-        "sizes": "48x48",
-        "type": "image/png",
-        "density": "1.0",
-        "purpose": "any maskable"
-      },
-      {
-        "src": "/assets/icons/android-icon-72x72.png",
-        "sizes": "72x72",
-        "type": "image/png",
-        "density": "1.5",
-        "purpose": "any maskable"
-      },
-      {
-        "src": "/assets/icons/android-icon-96x96.png",
-        "sizes": "96x96",
-        "type": "image/png",
-        "density": "2.0",
-        "purpose": "any maskable"
-      },
-      {
-        "src": "/assets/icons/android-icon-144x144.png",
-        "sizes": "144x144",
-        "type": "image/png",
-        "density": "3.0",
-        "purpose": "any maskable"
-      },
-      {
-        "src": "/assets/icons/android-icon-192x192.png",
-        "sizes": "192x192",
-        "type": "image/png",
-        "density": "4.0",
-        "purpose": "any maskable"
-      }
-    ]
-  }
+  "name": "service locator",
+  "short_name": "service locator",
+  "theme_color": "#33373a",
+  "background_color": "#faf6f6",
+  "start_url": ".",
+  "display": "standalone",
+  "description": "Allows End-Users to easily find and locate government services in RSA.\r The app scrapes data from official government websites such as departments, agencies and public services, including contact information, operating hours, and services offered. Find and locate governement services in RSA.",
+  "icons": [
+  
+  
+    {
+      "src": "/assets/web_app_icons/maskable_icon_x144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    }
+    
+  ]
+}
